--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/uuid": "^9.0.1",
     "mongodb": "^5.2.0",
     "next": "13.3.0",
+    "next-themes": "^0.2.1",
     "openai-edge-stream": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
